Content reorganisation step ... plus some beautification

--- a/docs/spec.tex
+++ b/docs/spec.tex
@@ -4,7 +4,7 @@
 
 \import{../work/}{crypto-ise.encodings.tex}
 
-\title{SCARV: RISC-V Crypto ISE \\ Specification}
+\title{SCARV: RISC-V \ISE ISE \\ Specification}
 
 \begin{document}
 
@@ -23,6 +23,7 @@
 \label{sec:bg}
 
 \import{./spec/}{bg-design.tex}
+\import{./spec/}{bg-feature.tex}
 \import{./spec/}{bg-related.tex}
 \import{./spec/}{bg-notation.tex}
 
