Content reorganisation step ...

--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -4,7 +4,7 @@
 
 \import{../work/}{crypto-ise.encodings.tex}
 
-\title{SCARV: RISC-V \ISE ISE \\ Specification}
+\title{RISC-V \ISE ISE \\ Specification}
 
 \begin{document}
 
@@ -15,25 +15,25 @@
 \section{Introduction}
 \label{sec:intro}
 
-\import{./spec/}{intro.tex}
+\import{./specification/}{intro.tex}
 
 % -----------------------------------------------------------------------------
 
 \section{Background}
 \label{sec:bg}
 
-\import{./spec/}{bg-design.tex}
-\import{./spec/}{bg-feature.tex}
-\import{./spec/}{bg-related.tex}
-\import{./spec/}{bg-notation.tex}
+\import{./specification/}{bg-design.tex}
+\import{./specification/}{bg-feature.tex}
+\import{./specification/}{bg-related.tex}
+\import{./specification/}{bg-notation.tex}
 
 % -----------------------------------------------------------------------------
 
 \section{Specification}
 \label{sec:spec}
 
-\import{./spec/}{spec-state.tex}
-\import{./spec/}{spec-instr.tex}
+\import{./specification/}{spec-state.tex}
+\import{./specification/}{spec-instr.tex}
 
 % =============================================================================
 
@@ -47,20 +47,20 @@
 \section{Instruction syntax}
 \label{appx:syntax}
 
-\import{./spec/}{appx-syntax.tex}
+\import{./specification/}{appx-syntax.tex}
 
 \newpage
 \section{Instruction encoding}
 \label{appx:encoding}
 
-\import{./spec/}{appx-encoding.tex}
-
-% =============================================================================
-
+\import{./specification/}{appx-encoding.tex}
 
 \newpage
 \section{Changelog}
-\import{./spec/}{crypto-ise.changelog.tex}
-\end{document}
+\label{appx:changelog}
+
+\import{./specification/}{crypto-ise.changelog.tex}
 
 % =============================================================================
+
+\end{document}
