Content reorganisation step ...

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -802,6 +802,7 @@ TBD
 
 % =============================================================================
 
+\newpage
 \printbibliography
 
 % =============================================================================
