--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -1,3 +1,44 @@
+@inproceedings{SCARV:BihAndKnu:98,
+  author       = {E. Biham and R. Anderson and L. Knudsen},
+  title        = {{Serpent}: A New Block Cipher Proposal},
+  booktitle    = {Fast Software Encryption (FSE)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 1372}, 
+  pages        = {222--238}, 
+  year         = {1998}
+}
+
+
+@inproceedings{SCARV:Biham:97,
+  author       = {E. Biham},
+  title        = {A fast new {DES} implementation in software},
+  booktitle    = {Fast Software Encryption (FSE)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 1267},
+  pages        = {260--272},
+  year         = {1997}
+}
+
+@inproceedings{SCARV:TheSisPne:09,
+  author       = {D. Theodoropoulos and A. Siskos and D. Pnevmatikatos},
+  title        = {{CCproc}: A Custom {VLIW} Cryptography Co-processor for Symmetric-Key Ciphers},
+  booktitle    = {Applied Reconfigurable Computing: Architectures, Tools and Applications (ARC)},
+  publisher    = {Springer-Verlag},
+  issues       = {LNCS 5453},
+  pages        = {318--323},
+  year         = {2009}
+}
+
+@inproceedings{SCARV:GraGroPag:08,
+  author       = {P. Grabher and J. Gro{\ss}sch\"{a}dl and D. Page},
+  title        = {Light-weight instruction set extensions for bit-sliced cryptography},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 5154}, 
+  pages        = {331--345}, 
+  year         = {2008}
+}
+
 @article{SCARV:GYCH:18,
   author       = {Q. Ge and Y. Yarom and D. Cock and G. Heiser},
   title        = {A Survey of Microarchitectural Timing Attacks and Countermeasures on Contemporary Hardware},
