--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -37,6 +37,7 @@
 
 % =============================================================================
 
+\newpage
 \printbibliography
 
 % =============================================================================
@@ -59,7 +60,7 @@
 \section{Changelog}
 \label{appx:changelog}
 
-\import{./specification/}{crypto-ise.changelog.tex}
+\import{./specification/}{appx-changelog.tex}
 
 % =============================================================================
 
