--- a/docs/specification/bg-related.tex
+++ b/docs/specification/bg-related.tex
@@ -5,9 +5,10 @@
 
 % co-processor/accelerator
 \cite{SCARV:Gutmann:00}
+\cite{SCARV:TheSisPne:09}
 % ISEs
-\cite{SCARV:FazLopOli:18}
-\cite{SCARV:RegIen:16}
 \cite{SCARV:BarGioMar:09}
+\cite{SCARV:RegIen:16}
+\cite{SCARV:FazLopOli:18}
 
 % =============================================================================
