Started detailing the example integration with the PicoRV32
- Add section to implementation document
- Add picorv32 repository as sub-module in `external/`
- Relates to #16

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   .gitmodules
	modified:   docs/implementation.tex
	new file:   docs/implementation/integration.tex
	modified:   docs/shared.sty
	new file:   external/picorv32

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -804,8 +804,7 @@ the implementation.}
 
 \section{Integration Guide}
 \label{sec:integration}
-
-TBD
+\import{./implementation/}{integration.tex}
 
 \section{Verification}
 \label{sec:verification}
