--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -112,6 +112,8 @@
 
 % ISE name
 \newcommandx{\ISE}{{\sf XCrypto}\xspace}
+% Co-processor name
+\newcommandx{\COP}{\ISE Co-Processor}
 % calligraphic (e.g., for mathematical spaces)
 \newcommandx{\C}[1]{\ensuremath{\mathcal #1}\xspace}
 % black board  (e.g., for mathematical structures)
