Some more documentation for the integration testbench.
- Show how to run example programs.
- Explain where all of the files are.

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   docs/implementation/integration.tex
	modified:   docs/shared.sty

--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -108,6 +108,11 @@
 \end{bytefield}
 \end{figure}}
 
+
+% For multi-line autoflowed table cells
+\newcolumntype{Y}{>{\RaggedRight\arraybackslash}X}
+
+
 % =============================================================================
 
 % ISE name
