--- a/docs/implementation/integration.tex
+++ b/docs/implementation/integration.tex
@@ -35,4 +35,93 @@ The top level module for the sub-system is {\tt scarv\_prv\_xcrypt\_top}.
 This section lists the files required for working with the example
 integration.
 
-... TBD ...
+\subsubsection{Integration RTL}
+
+The synthesisable RTL for the example integration is split across three
+directories:
+
+\begin{enumerate}
+\item {\tt \$COP\_HOME/rtl/coprocessor} Contains all of the RTL dedicated
+    to the \COP.
+    This RTL will be required to create other custom integrations.
+\item {\tt \$COP\_HOME/rtl/integration} Contains all of the RTL dedicated
+    to the integration.
+    Principally, it contains the glue logic for the
+    sub-system top level, and the PCPI to \COP interface converter.
+\item {\tt \$COP\_HOME/external/picorv32/} Contains the {\tt picorv32.v}
+    file, which has all of the logic for the PicoRV32 core in it.
+\end{enumerate}
+
+\subsubsection{Integration Testbench}
+
+All files for the integration testbench are found in 
+{\tt \$COP\_HOME/verif/tb}.
+
+The {\tt tb\_integration.v} file is the top-level testbench for the 
+subsystem.
+The {\tt axi\_sram.v} file contains simple AXI SRAM models used to simulate
+a wider SoC.
+
+Several "plusarg" options can be passed to the top level integration
+testbench:
+
+\begin{table}[h]
+\begin{tabularx}{\textwidth}{l l Y}
+\toprule
+\textbf{Name} & \textbf{Type} & \textbf{Description} \\ \midrule
+  IMEM        & String        & Memory hex file image to load. \\
+  WAVES       & String        & Where to dump VCD waves file.  \\
+  TIMEOUT     & Integer       & Number of clock cycles to simulate for. \\
+  PASS\_ADDR  & Integer       & If the PicoRV32 requests this address, the 
+    simulation will stop and report "SIM PASSED"    \\
+  FAIL\_ADDR  & Integer       & If the PicoRV32 requests this address, the
+    simulation will stop and report "SIM FAILED" \\
+\bottomrule
+\end{tabularx}
+\end{table}
+
+All of these plusargs are automatically filled by the simulation flow
+when running {\tt make}.
+By default, VCD waveforms will be dumped to
+{\tt \$COP\_WORK/icarus/integ-waves.vcd}.
+This can be overridden by exporting the environment variable
+{\tt RTL\_WAVES} with the desired value.
+
+Likewise, an arbitrary memory image can be specified using the
+{\tt SIM\_UNIT\_TEST} environment variable.
+
+
+\subsection{Integration Flow}
+
+This section describes how to simulate and synthesise the example
+integration sub-system.
+
+\subsubsection{Simulation}
+
+Building the integration testbench is done with:
+\begin{lstlisting}[language=bash]  
+$> make icarus_integ_tb
+\end{lstlisting}
+
+Running the integration testbench is done with:
+
+\begin{lstlisting}[language=bash]
+$> make icarus_run_integ
+\end{lstlisting}
+
+A specific memory image can be specified with:
+
+\begin{lstlisting}[language=bash]
+$> make icarus_run_integ SIM_UNIT_TEST=<path to .hex file>
+\end{lstlisting}
+
+Running {\tt make examples} will build a set of example programs which can
+be easily run within the integration testbench.
+
+Note that all tests under {\tt \$COP\_HOME/verif/unit} {\em can} be run
+under the integration testbench, but they will fail out immediately
+as they are designed to be run with the functional verification testbench.
+
+\subsubsection{Synthesis}
+
+TBD
